--- a/_posts/2017-10-22-jianwei.md
+++ b/_posts/2017-10-22-jianwei.md
@@ -5,7 +5,7 @@ tags: 生活
 picture_frame: shadow  
 ---
 
-这篇文章是偶然在阮一峰老师的博客看到的，看完觉得很有启发，先转载与此
+这篇文章是偶然在阮一峰老师的博客看到的，看完觉得很有启发，先转载于此
 
 ![](/postimg/bg2017071601.jpg)
 
