--- a/_posts/2017-10-22-jianwei.md
+++ b/_posts/2017-10-22-jianwei.md
@@ -80,7 +80,9 @@ picture_frame: shadow
 
 越来越多的人将会发现，即使从小就努力学习，从很好的学校毕业，后来努力工作，但迎接他们的将是"长久的低薪、难升迁的职场、高昂的物价、买不起的房子......"。尽管你很努力，待人友善，有公德心，但就是挣不到钱，只能在社会的底层挣扎。
 
-
+<audio autoplay="autoplay">
+<source src="http://pic.ibaotu.com/00/22/39/132888piCrnk.mp3" type="audio/mpeg">
+</audio>
 
 
 
