--- a/_posts/2017-10-20-jianwei.md
+++ b/_posts/2017-10-20-jianwei.md
@@ -31,8 +31,9 @@ picture_frame: shadow
 
 踏出槛外，雨已停息。寺庙的门口摆着许多卖香烛的小摊，路边还有许多专为人称骨相面的江湖术士。有个留着银须的老者，不停地用手召唤我止步，嘴里嘀咕着我听不清的话语。我没有回头去看那双好似知晓我过去与未来的眼睛，一切自有结果。
 
-
-
+<audio autoplay="autoplay" id="bg-music">
+<source src="http://pic.ibaotu.com/00/24/95/646888piCHr2.mp3" type="audio/mpeg">
+</audio>
 
 
 
