--- a/_posts/2017-10-29-jianwei.md
+++ b/_posts/2017-10-29-jianwei.md
@@ -29,5 +29,5 @@ picture_frame: shadow
 吵吵闹闹尽显家的味道，嘘寒问暖只因真情不假，不知不觉又一个冬夏，相辅相伴中，心痛是因为情浓，平平淡淡中，得失已看得不重，有你的地方就有家，陪伴是最长的情话，我将用一生去倾听它。
 
 <audio autoplay="autoplay" id="bg-music">
-<source src="http://594095.freep.cn/594095/dhxy.m4a" type="audio/mpeg">
+<source src="http://t1.aixinxi.net/o_1cfrui16n7m103g1l1pnt4b1sa.mp3" type="audio/mpeg">
 </audio>
