--- a/_posts/2018-08-06-jianwei .md
+++ b/_posts/2018-08-06-jianwei .md
@@ -7,7 +7,7 @@ picture_frame: none
 
 
 <p>
-<img src="http://t1.aixinxi.net/o_1cjq8q52f1bh71osq18nq1r9s15fua.jpg-j.jpg"/>
+<a href="/2018/08/06/jianwei.html"><img src="http://t1.aixinxi.net/o_1cjq8q52f1bh71osq18nq1r9s15fua.jpg-j.jpg"/></a>
 </p><!--more-->
 
 
