--- a/_posts/2018-08-11-jianwei .md
+++ b/_posts/2018-08-11-jianwei .md
@@ -7,7 +7,7 @@ picture_frame: none
 
 
 <p>
-<a href="/2018/08/06/jianwei.html"><img src="http://t1.aixinxi.net/o_1ckkqp40u81110217kv19f017gha.png-w.jpg"/></a>
+<a href="/2018/08/06/jianwei.html"><img src="http://t1.aixinxi.net/o_1ckkqp40u81110217kv19f017gha.png-j.jpg"/></a>
 </p><!--more-->
 
 一直想把末代皇帝这首曲子拔下来，但是一直没有找到好的小提琴音源，不过终于还是找到一款<b>《Session Strings Pro 2》</b>（配乐弦乐2）。
