--- a/_posts/2018-09-4-jianwei.md
+++ b/_posts/2018-09-4-jianwei.md
@@ -5,11 +5,11 @@ tags: 音乐
 picture_frame: none
 ---
 <p>
-<a href="/2018/09/04/jianwei.html"><img src="http://t1.aixinxi.net/o_1cmici8c9r6p6drsavel819m2a.png-j.jpg"/></a>
+<a href="/2018/09/04/jianwei.html"><img src="http://t1.aixinxi.net/o_1cmih6a901g3c1cuut0p1n51meka.jpg-j.jpg"/></a>
 </p><!--more-->
 香蜜就是又香又甜吧，爱情的开始好像都是香蜜的感觉，沉沉怎么理解呢，沉有深的意思也有向下的意思，就像爱情会越爱越浓，同时也可能越爱越淡，烬如霜就是燃尽后如霜一样，解释不通，看了电视才知道，烬代表男主角火神，霜代表女主角水神，水火交融，至情至深，唯有火燃尽，水如霜。
 <p>
-<img src="http://t1.aixinxi.net/o_1cmic99rn1dcp9oc1rhe11tlie7a.png-j.jpg"/>
+<img src="http://t1.aixinxi.net/o_1cmih81gpc4n1rrfgf1r4nq97a.jpg-j.jpg"/>
 </p>
 
 
