修改前方的路一文中的文字

--- a/_posts/2018-09-27-jianwei .md
+++ b/_posts/2018-09-27-jianwei .md
@@ -11,7 +11,7 @@ picture_frame: none
 </p><!--more-->
 
 
-最近抽空看了一本书叫《前方的路》，此书对当下的一些现实问题做了理性的内在分析，对于将来总是悲哀"多于希望"，也许作者本身对现实的状况有太多的失望吧，以至于对未来危机感很强，总结了些觉得很有意思的段落给自己看：
+最近抽空看了一本书叫《前方的路》，此书对当下的一些现实问题做了理性的内在分析，对于将来总是悲哀"多于希望"吧，以至于本书对未来危机感很强，总结了些觉得很有意思的段落给自己看：
 
 ### 等待戈多
 
