修改文章文字

--- a/_posts/2019-11-16-jianwei.md
+++ b/_posts/2019-11-16-jianwei.md
@@ -20,6 +20,6 @@ picture_frame: shadow
 
 
 
-他坚持不懈的为了喜剧明星之梦而努力，但他没有成为喜剧明星的天赋，于是他不得不装扮起了小丑，想通过装扮小丑把别人逗笑，但却屡屡受挫，因为疾病的原因，他得不到社会的尊重，得不到生活周围人的同情和帮助，他看不到人生的希望，每天都处于自卑的境地，唯一摆脱烦恼的方式，就是看着喜剧电视节目大口大口的吸着烟，老板的嫌弃，同事与朋友的嘲笑，陌生人的不尊重，电视台脱口秀节目主持人的公开嘲笑，养母的隐瞒欺骗，一步步将他逼成了以杀人为短暂快乐的“小丑”。
+他坚持不懈的为了喜剧明星而努力，但他没有成为喜剧明星的天赋，于是他不得不装扮起了小丑，想通过装扮小丑把别人逗笑，但却屡屡受挫，因为疾病的原因，他得不到社会的尊重，得不到周围人的同情和帮助，他看不到人生的希望，每天都处于自卑的境地，唯一摆脱烦恼的方式，就是看着喜剧电视节目大口大口的吸烟，老板的嫌弃，同事与朋友的嘲笑，陌生人的不尊重，脱口秀节目主持人的公开嘲笑，养母的隐瞒欺骗，一步步将他逼成了以杀人为乐的“小丑”。
 
 社会中每个阶层都有着这样的小丑，在小丑的装扮下面，假装的去给别人带来快乐，其实只是为了获取自身利益虚伪而可恶。
